// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: PlacementBreakdown HeaderComponent renders correctly 1`] = `
<thead>
  <Table.Row
    className="HeaderRow"
  >
    <Table.HeaderCell
      className="PlacementNameCell"
    />
    <Table.HeaderCell
      className="RegionCell"
    >
      Region
    </Table.HeaderCell>
    <Table.HeaderCell
      className="Placement"
    >
      Inbox
    </Table.HeaderCell>
    <Table.HeaderCell
      className="Placement"
    >
      Spam
    </Table.HeaderCell>
    <Table.HeaderCell
      className="Placement"
    >
      Missing
    </Table.HeaderCell>
    <Table.HeaderCell
      className="Authentication divider"
    >
      SPF
    </Table.HeaderCell>
    <Table.HeaderCell
      className="Authentication"
    >
      DKIM
    </Table.HeaderCell>
    <Table.HeaderCell
      className="Authentication"
    >
      DMARC
    </Table.HeaderCell>
  </Table.Row>
</thead>
`;

exports[`Component: PlacementBreakdown RowComponent renders mailbox provider correctly 1`] = `
<Table.Row
  className="DataRow"
>
  <Table.Cell
    className="PlacementNameCell"
  >
    <PageLink
      to="/inbox-placement/details/1/mailbox-provider/dogmail.com"
    >
      <strong>
        dogmail.com
      </strong>
    </PageLink>
  </Table.Cell>
  <Table.Cell
    className="RegionCell"
  >
    North America
  </Table.Cell>
  <Table.Cell
    className="Placement"
  >
    <GroupPercentage
      value={0}
    />
  </Table.Cell>
  <Table.Cell
    className="Placement"
  >
    <GroupPercentage
      value={0}
    />
  </Table.Cell>
  <Table.Cell
    className="Placement"
  >
    <GroupPercentage
      value={1}
    />
  </Table.Cell>
  <Table.Cell
    className="Authentication divider"
  >
    <GroupPercentage
      value={0}
    />
  </Table.Cell>
  <Table.Cell
    className="Authentication"
  >
    <GroupPercentage
      value={0}
    />
  </Table.Cell>
  <Table.Cell
    className="Authentication"
  >
    <GroupPercentage
      value={1}
    />
  </Table.Cell>
</Table.Row>
`;

exports[`Component: PlacementBreakdown RowComponent renders region correctly 1`] = `
<Table.Row
  className="DataRow"
>
  <Table.Cell
    className="PlacementNameCell"
  >
    <strong>
      North America
    </strong>
  </Table.Cell>
  <Table.Cell
    className="Placement"
  >
    <GroupPercentage
      value={0}
    />
  </Table.Cell>
  <Table.Cell
    className="Placement"
  >
    <GroupPercentage
      value={0}
    />
  </Table.Cell>
  <Table.Cell
    className="Placement"
  >
    <GroupPercentage
      value={1}
    />
  </Table.Cell>
  <Table.Cell
    className="Authentication divider"
  >
    <GroupPercentage
      value={0}
    />
  </Table.Cell>
  <Table.Cell
    className="Authentication"
  >
    <GroupPercentage
      value={0}
    />
  </Table.Cell>
  <Table.Cell
    className="Authentication"
  >
    <GroupPercentage
      value={1}
    />
  </Table.Cell>
</Table.Row>
`;

exports[`Component: PlacementBreakdown SubComponent: GroupPercentage renders percentage correctly 1`] = `
<span
  className="GroupValue"
>
  20%
</span>
`;

exports[`Component: PlacementBreakdown matches snapshot with provider data 1`] = `
<TableCollection
  defaultSortColumn="placement.inbox_pct"
  defaultSortDirection="desc"
  headerComponent={[Function]}
  pagination={true}
  rowComponent={[Function]}
  rows={
    Array [
      Object {
        "authentication": Object {
          "dkim_pct": 0,
          "dmarc_pct": 1,
          "spf_pct": 0,
        },
        "mailbox_provider": "dogmail.com",
        "placement": Object {
          "inbox_pct": 0,
          "missing_pct": 1,
          "spam_pct": 0,
        },
      },
      Object {
        "authentication": Object {
          "dkim_pct": 0.1,
          "dmarc_pct": 0.1,
          "spf_pct": 0.8,
        },
        "mailbox_provider": "doghouseinbox.com",
        "placement": Object {
          "inbox_pct": 0.8,
          "missing_pct": 0.1,
          "spam_pct": 0.1,
        },
      },
    ]
  }
  saveCsv={false}
  wrapperComponent={[Function]}
/>
`;

exports[`Component: PlacementBreakdown matches snapshot with region data 1`] = `
<TableCollection
  defaultSortColumn="placement.inbox_pct"
  defaultSortDirection="desc"
  headerComponent={[Function]}
  pagination={true}
  rowComponent={[Function]}
  rows={
    Array [
      Object {
        "authentication": Object {
          "dkim_pct": 0,
          "dmarc_pct": 1,
          "spf_pct": 0,
        },
        "placement": Object {
          "inbox_pct": 0,
          "missing_pct": 1,
          "spam_pct": 0,
        },
        "region": "north america",
      },
      Object {
        "authentication": Object {
          "dkim_pct": 0.1,
          "dmarc_pct": 0.1,
          "spf_pct": 0.8,
        },
        "placement": Object {
          "inbox_pct": 0.8,
          "missing_pct": 0.1,
          "spam_pct": 0.1,
        },
        "region": "europe",
      },
    ]
  }
  saveCsv={false}
  wrapperComponent={[Function]}
/>
`;

exports[`Component: PlacementBreakdown renders correctly with no data 1`] = `
<TableCollection
  defaultSortColumn="placement.inbox_pct"
  defaultSortDirection="desc"
  headerComponent={[Function]}
  pagination={true}
  rowComponent={[Function]}
  rows={Array []}
  saveCsv={false}
  wrapperComponent={[Function]}
/>
`;
